# ziphq

./: .gitignore  README.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml  manual-tests.yml
scripts/: configure-github-repo.sh
src/mymodule/: __init__.py
tests/: test_mymodule.py
